fix: fixes quiz navigation buttons on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,3 +152,13 @@ body {
     transform: translateX(0);
   }
 }
+
+/* Media query: smaller phones */
+@media screen and (max-width: 576px) {
+  .carousel-control-next {
+    visibility: hidden;
+  }
+  .carousel-control-prev {
+    visibility: hidden;
+  }
+}
